--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 et_xmlfile==2.0.0
 git-filter-repo==2.47.0
+gunicorn==23.0.0
 openpyxl==3.1.5
+packaging==25.0
 psycopg2-binary==2.9.10
 PyJWT==2.9.0
 python-dotenv==1.1.1
